feat: added the updates to the catalog module and updated the documentation for the same
